# libpgdump

./: CLAUDE.md  Cargo.toml  Justfile  README.md
.github/workflows/: release.yaml  testing.yaml
crates/pgdump2parquet/: Cargo.toml  FUTURE.md  HANDOFF.md
crates/pgdump2parquet-arrow/: Cargo.toml
crates/pgdump2parquet-arrow/src/: lib.rs
crates/pgdump2parquet-core/: Cargo.toml
crates/pgdump2parquet-core/src/: block.rs  copy_text.rs  ddl.rs  directory.rs  lib.rs  sink.rs  typed.rs
crates/pgdump2parquet-duckdb/: Cargo.toml
crates/pgdump2parquet-duckdb/src/: lib.rs
crates/pgdump2parquet/src/: main.rs
src/: constants.rs  duckdb_export.rs  dump.rs  entry.rs  error.rs  header.rs  lib.rs  sort.rs  types.rs  version.rs
src/compress/: gzip.rs  lz4.rs  mod.rs  none.rs  zstd.rs
src/format/: custom.rs  directory.rs  mod.rs  tar.rs
src/io/: primitives.rs
tests/: read_dump.rs  round_trip.rs
tests/common/: mod.rs
