[package]
name = "libpgdump"
version = "2.1.0"
edition = "2024"
rust-version = "1.88"
description = "A Rust library for reading and writing PostgreSQL dump files"
license = "BSD-3-Clause"
repository = "https://github.com/gmr/libpgdump"
keywords = ["postgresql", "pg_dump", "backup", "restore"]
categories = ["database", "parser-implementations"]

[dependencies]
flate2 = "1"
lz4_flex = "0.11"
tempfile = "3"
thiserror = "2"
zstd = "0.13"

# Optional CLI-only deps (gated behind the `cli` feature).
arrow-array = { version = "53", optional = true }
arrow-schema = { version = "53", optional = true }
parquet = { version = "53", optional = true, default-features = false, features = ["arrow", "zstd", "snap"] }
clap = { version = "4", optional = true, features = ["derive"] }
anyhow = { version = "1", optional = true }
# duckdb = bundled libduckdb, used by the `--engine duckdb` path in the CLI.
# Bundled build is slow (minutes) but keeps the resulting binary fully
# self-contained with no runtime dep on a system libduckdb.
duckdb = { version = "1", optional = true, features = ["bundled", "parquet", "json"] }

[features]
default = []
# The core CLI: Rust-only, arrow-rs + parquet writer, fast to build.
cli = ["dep:arrow-array", "dep:arrow-schema", "dep:parquet", "dep:clap", "dep:anyhow"]
# Enables the `--engine duckdb` path (embedded libduckdb). Implies `cli`.
cli-duckdb = ["cli", "dep:duckdb"]

[[bin]]
name = "pgdump2parquet"
path = "src/bin/pgdump2parquet.rs"
required-features = ["cli"]

[dev-dependencies]
pretty_assertions = "1"
