[workspace]
members = [
    ".",
    "crates/pgdump2parquet-core",
    "crates/pgdump2parquet-arrow",
    "crates/pgdump2parquet-duckdb",
    "crates/pgdump2parquet",
]
resolver = "2"

[package]
name = "libpgdump"
version = "2.1.0"
edition = "2024"
rust-version = "1.88"
description = "A Rust library for reading and writing PostgreSQL dump files"
license = "BSD-3-Clause"
repository = "https://github.com/gmr/libpgdump"
keywords = ["postgresql", "pg_dump", "backup", "restore"]
categories = ["database", "parser-implementations"]

[dependencies]
flate2 = "1"
lz4_flex = "0.11"
tempfile = "3"
thiserror = "2"
zstd = "0.13"

[dev-dependencies]
pretty_assertions = "1"
