[package]
name = "pgdump2parquet-arrow"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "Arrow-rs + parquet-crate ParquetSink implementation for pgdump2parquet."
license = "BSD-3-Clause"
publish = false

[dependencies]
pgdump2parquet-core = { path = "../pgdump2parquet-core" }
arrow-array = "54"
arrow-buffer = "54"
arrow-schema = "54"
parquet = { version = "54", default-features = false, features = ["arrow", "zstd", "snap"] }
