[package]
name = "pgdump2parquet-core"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "Backend-agnostic core for converting pg_dump archives to Parquet: COPY-TEXT and CREATE-TABLE parsers, sink trait, per-table driver."
license = "BSD-3-Clause"
publish = false

[dependencies]
libpgdump = { path = "../.." }
memchr = "2"
thiserror = "2"
# Per-table decompressors for the directory-format (`-Fd`) input path. The
# per-table files in a -Fd dump are plain compressed streams (no custom-
# format chunking), so we feed them through these decoders directly.
#
# flate2 defaults to `miniz_oxide` (pure Rust, ~150–300 MB/s).  Enable the
# `fast-gzip` feature on this crate to swap in **zlib-rs**, a pure-Rust zlib
# from Trifecta Tech Foundation that's faster than zlib-ng at every
# relevant chunk size (see their benchmark post — ~6-13% faster than
# zlib-ng for decompression at 1-65 KB chunks, and Chromium's zlib too).
# Unlike zlib-ng, zlib-rs has zero C build dependencies.
flate2 = { version = "1.1", default-features = false, features = ["rust_backend"] }
lz4_flex = "0.11"
zstd = "0.13"

[features]
default = []
# Swap flate2's default miniz_oxide backend for **zlib-rs** — pure Rust,
# faster than zlib-ng. Worth enabling whenever single-thread gunzip is the
# bottleneck (e.g. a big `.dat.gz` per-table file in a `-Fd` dump).
# No extra build-time deps — still pure Rust.
fast-gzip = ["flate2/zlib-rs"]
