[package]
name = "pgdump2parquet-core"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "Backend-agnostic core for converting pg_dump archives to Parquet: COPY-TEXT and CREATE-TABLE parsers, sink trait, per-table driver."
license = "BSD-3-Clause"
publish = false

[dependencies]
libpgdump = { path = "../.." }
memchr = "2"
# arrow crates for typed RecordBatch construction. Version 53 matches
# what duckdb-rs 1.2 brings in, so RecordBatches produced here flow
# straight into `Appender::append_record_batch` and the arrow-rs
# Parquet writer without a second conversion step.
arrow-array = "54"
arrow-buffer = "54"
arrow-schema = "54"
# sqlparser (apache/datafusion-sqlparser-rs): pure-Rust SQL parser with
# a native PostgreSQL dialect. Battle-tested in DataFusion/DuckDB-land
# and handles every quirk of pg_dump-emitted `CREATE TABLE` DDL
# (partitioned tables, inherited tables, composite types, generated
# columns, etc.) without the maintenance burden of a hand parser.
sqlparser = "0.61"
thiserror = "2"
# Per-table decompressors for the directory-format (`-Fd`) input path.
# Each per-table file is a plain compressed stream (no custom-format
# chunking inside), so we feed them through these decoders directly.
#
# flate2 backend is selected by the `gzip-miniz` / `fast-gzip` features
# on this crate below. We pull in flate2 with *no* default features so
# the backend is entirely caller-controlled — this mirrors the
# recommended pattern in flate2's README and keeps the binary free of
# unused backends.
flate2 = { version = "1.1", default-features = false }
lz4_flex = "0.11"
zstd = "0.13"

[features]
# `gzip-miniz` (default): pure-Rust, all-safe `miniz_oxide`.
default = ["gzip-miniz"]

# Pure Rust, no unsafe code. ~150–300 MB/s gunzip on typical hardware.
# This is the conservative choice and what you get by default.
gzip-miniz = ["flate2/rust_backend"]

# **zlib-rs** — a newer pure-Rust zlib by Trifecta Tech Foundation.
# Benchmarks faster than zlib-ng (the leading C fork) at every relevant
# chunk size; still pure Rust but uses some `unsafe` for SIMD.
# Worth enabling whenever single-thread gunzip is the bottleneck
# (e.g. a big `.dat.gz` per-table file in a `-Fd` dump). Usage:
#     cargo build --no-default-features --features fast-gzip
fast-gzip = ["flate2/zlib-rs"]
