[package]
name = "pgdump2parquet"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "CLI: convert a pg_dump custom-format archive directly to Parquet files, one per table, without going through Postgres."
license = "BSD-3-Clause"
publish = false

[dependencies]
libpgdump = { path = "../.." }
pgdump2parquet-core = { path = "../pgdump2parquet-core" }
pgdump2parquet-arrow = { path = "../pgdump2parquet-arrow" }
# Optional: embed DuckDB. Compile-time expensive (~5min clean build) but
# produces a standalone binary with no runtime DuckDB dependency.
pgdump2parquet-duckdb = { path = "../pgdump2parquet-duckdb", optional = true }
clap = { version = "4", features = ["derive"] }
anyhow = "1"

[features]
default = []
# Enables the `--engine duckdb` code path. Without this feature, selecting
# that engine at runtime exits with an error message.
duckdb = ["dep:pgdump2parquet-duckdb"]
# Swap flate2's default miniz_oxide gzip backend for C-based zlib-ng.
# Roughly 2-3× faster gunzip on most CPUs; requires a C compiler at
# build time.  Useful when single-thread gunzip is the bottleneck on a
# big gzip-compressed table (e.g. USAspending's 43 GB `.dat.gz` files).
fast-gzip = ["pgdump2parquet-core/fast-gzip"]

[[bin]]
name = "pgdump2parquet"
path = "src/main.rs"
